# vsc-install

./: README.md  build-rpm-via-uv.sh  extract_rpm_deps.py  pyproject.toml  ruff.toml
.github/workflows/: unittest.yml
lib/vsc/: __init__.py
lib/vsc/install/: ci.py  commontest.py  methodinspector.py  shared_setup.py  testing.py
src/vsc/install/: __init__.py  ci.py  commontest.py  headers.py  shared_setup.py  testing.py
test/: 00-import.py  __init__.py  ci.py  commontest.py  headers.py  licenses.py  prospectortest.py  shared_setup.py  testing.py
test/headers/: t8.check.py  t8.fixed.py
test/prospectortest/lib/vsc/: __init__.py
test/prospectortest/lib/vsc/mockinstall/: E101.py  E111.py  E501.py  E713.py  F811.py  W291.py  __init__.py  arguments_differ.py  backtick.py  bad_indentation.py  bare_except.py  dangerous_default_value.py  duplicate_key.py  import_star_module_level.py  indexing_exception.py  line_too_long.py  metaclass_assignment.py  no_value_for_parameter.py  old_ne_operator.py  old_octal_literal.py  old_raise_syntax.py  print_statement.py  raising_string.py  redefine_in_handler.py  redefined_builtin.py  reimported.py  syntax_error.py  trailing_whitespace.py  undefined_variable.py  unpacking_in_except.py  unused_argument.py  unused_import.py  unused_variable.py
test/testdata/vsc/: __init__.py
