[project]
name = "vsc-install"
version = "0.24.0"
requires-python = ">=3.9"
description = "Installation helpers for VSC-related Python packages"
readme = "README.md"
license = { text = "GPLv2" }

authors = [
    { name = "Andy Georges", email = "andy.georges@ugent.be" },
    { name = "Stijn Deweirdt", email = "stijn.deweirdt@ugent.be" }
]

# Add only the REAL runtime dependencies here
dependencies = [
]

[project.optional-dependencies]
# e.g. tooling or test extras, add as needed
dev = []

[project.scripts]
# If the project exposes any console scripts, define them here.
# Example:
# vsc-install = "vsc_install.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vsc"]

[tool.uv]
# uv-specific config if you ever want it (optional)
